revert back to async thread for map gen